Add JAVA_OPTS to suppress Java 11-related warnings during init
Bug: Issue 12639
Change-Id: Iae3289d7703a5c8a3d7cc9e257cd0c1403bf9570